crates/ditto-checker/tests/golden/type-errors/record_unification_error_0.ditto
module Test exports (..);

nah = fn (x : { foo: Int, bar: Int, baz: Float }) ->
    [x.foo, x.bar, x.baz];
